--- a/style.css
+++ b/style.css
@@ -51,3 +51,37 @@ html {
     margin: 1.5em auto 0 auto;
     display: block;
 }
+
+.popup {
+    background: linear-gradient(135deg, #8052ec, #d161ff);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    z-index: 2;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1em;
+    font-size: 12vmin;
+}
+
+#new-game {
+    padding: 0.5em 1em;
+    background-color: #0a0027;
+    color: white;
+    font-size: 0.5em;
+    border-radius: 0.2em;
+    border: none;
+}
+
+#message {
+    color: white;
+    text-align: center;
+    font-size: 1em;
+}
+
+.popup.hide {
+    display: none;
+}
+
